--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,4 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	body(ng-app='gearWorks' ng-controller='index' data-ng-init='initFunction()')
