--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,16 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title= title
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
+		link(rel='stylesheet', href='/bower_components/fontawesome/css/font-awesome.min.css')
+		script(type="text/javascript", src='/bower_components/angular/angular.min.js')
+		script(type="text/javascript", src='/bower_components/threejs/build/three.min.js')
+		script(type="text/javascript", src='/javascripts/app.js')
+		script(type="text/javascript", src='/javascripts/controller.js')
+		script(type="text/javascript", src='/javascripts/services.js')
+	block content
+	script(type="text/javascript", src='/bower_components/jquery/dist/jquery.min.js')
+	script(type="text/javascript", src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
