1. Learning three.js

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,5 @@
 extends layout
 
 block content
-	body(ng-app='gearWorks' ng-controller='index' data-ng-init='initFunction()')
+    body(ng-app='gearWorks' ng-controller='index' data-ng-init='initFunction()')
+        div(id='canvas-container')
