--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,15 @@
 html,
 body {
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 a {
 	color: #00B7FF;
 }
 
-canvas {
-	width: 100%;
-	height: 100%;
+#canvas-container {
+    width: 100% !important;
+    height: 100% !important;
 }
